government_api/k8s-manifest/gov-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: government-api-svc
  namespace: government-api-ns
  labels:
    app: government-api
spec:
  type: ClusterIP
  selector:
    app: government-api
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
