government_api/k8s-manifest/deny-all-gov.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: government-api-deny-all
  namespace: government-api-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
